<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="@dimen/spacing_xl">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activation_title"
        style="@style/Text.OttTv.Title" />

    <TextView
        android:id="@+id/tv_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_m"
        android:text="@string/activation_subtitle"
        style="@style/Text.OttTv.Subtitle" />

    <TextView
        android:id="@+id/tv_code_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_xl"
        android:text="@string/activation_code_label"
        style="@style/Text.OttTv.Subtitle" />

    <TextView
        android:id="@+id/tv_activation_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_s"
        android:textIsSelectable="false"
        android:letterSpacing="0.15"
        style="@style/Text.OttTv.Code" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_xl"
        android:indeterminate="true"
        android:indeterminateTint="@color/colorAccent" />

    <TextView
        android:id="@+id/tv_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_m"
        android:text="@string/activation_status_connecting"
        style="@style/Text.OttTv.Status" />

    <Button
        android:id="@+id/btn_retry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_xl"
        android:text="@string/activation_retry"
        android:visibility="gone"
        style="?attr/borderlessButtonStyle" />

</LinearLayout>
